AI-JADEDEVS4/src/objects/FieldMap__mdt.object
<CustomObject>
    <description>Used in the Order conversion process to map Opportunity fields to other objects (Order, Contract, Renewal Opportunity).</description>
    <fields>
        <fullName>FromField__c</fullName>
        <label>From Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromObject__c</fullName>
        <label>From Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToField__c</fullName>
        <label>To Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToObject__c</fullName>
        <label>To Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Field Map</label>
    <pluralLabel>Field Maps</pluralLabel>
</CustomObject>